# saleor

./: .isort.cfg  CHANGELOG.md  Dockerfile  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  service-worker.js
css/: app.52ae1498b8c189a6c1a8.css  app.6c36e39d622f47e3c19a.css  app.ea5d1849616a2a4c3a19.css  app.ed381d8d2a2ec6a1e3c6.css
docs/contributing/: coding-style.rst
docs/customization/: backend.rst  tests.rst
features/: index.html
js/: app.1b739567afcd0730d5fc.js  app.80d215b29b1820ae4581.js  app.875cd11a22651ac6d17b.js  app.a7b395a5763b6d8fc2df.js  app.c31c856dd3d0ee789145.js  app.f2e2583a70b205b442ac.js  app.fd7f787f90d8cb470db8.js
privacy-policy-terms-and-conditions/: index.html
roadmap/: index.html
saleor/: settings.py
saleor/dashboard/product/: forms.py  views.py
saleor/discount/: models.py  utils.py
saleor/graphql/: schema.graphql
saleor/graphql/account/mutations/: staff.py
saleor/graphql/product/mutations/: products.py
saleor/graphql/product/types/: products.py
saleor/payment/gateways/stripe_new/: __init__.py
saleor/product/: filters.py  models.py  tasks.py
saleor/product/migrations/: 0096_product_minimal_variant_price.py
saleor/static/dashboard-next/: theme.ts
saleor/static/dashboard-next/storybook/__snapshots__/: Stories.test.ts.snap
tests/: test_product.py
tests/api/: test_product.py
tests/gateway/: test_stripe_new.py
