[tool.poetry]
name = "saleor"
version = "2.6.0"
description = "A modular, high performance e-commerce storefront built with GraphQL, Django, and ReactJS."
authors = ["Mirumee Software <hello@mirumee.com>"]
license = "BSD-3-Clause"

readme = "README.md"

homepage = "https://getsaleor.com/"
repository = "https://github.com/mirumee/saleor"
documentation = "https://docs.getsaleor.com/en/latest/"

[tool.poetry.dependencies]
python = ">=3.6, <3.8"
Babel = "^2.6"
bleach = "<3"
boto3 = "^1.9"
braintree = "~3.49"
celery = {version = "^4.3", extras = ["redis"]}
dataclasses = {version = "^0",python = "3.6"}
django = "~2.2"
dj-email-url = "^0"
dj-database-url = "^0"
django-babel = "^0"
django-bootstrap4 = "^0"
django-cache-url = "^3.0"
django-countries = "^5.3"
django-debug-toolbar = "^1.11"
django-debug-toolbar-request-history = "^0"
django-filter = "^2.1"
django-graphql-jwt = "^0"
django-impersonate = "^1.4"
django-measurement = "~3.0"
django-mptt = "^0"
django-phonenumber-field = "~2.3"
django-prices = "^1.0"
django-prices-openexchangerates = "^1.0"
django-prices-vatlayer = "^1.0"
django-redis = "^4.10"
django-storages = "^1.7"
django-templated-email = "^2.3"
django-versatileimagefield = "^1.10"
django-webpack-loader = "^0"
django-celery-results = "^1.0"
django-elasticsearch-dsl = "^0"
django-recaptcha = "^1.0"
django-silk = "^2.0"
elasticsearch = "~6.3"
elasticsearch-dsl = "~6.0"
faker = "^1.0"
freezegun = "^0"
google-measurement-protocol = "^1.0"
google-i18n-address = "^2.3"
graphene-django = "^2.2"
graphene-django-optimizer = "^0"
kombu = "<5"
Markdown = "^3.0"
maxminddb = "^1.4"
maxminddb-geolite2 = "^2018.703"
phonenumberslite = "^8.10"
prices = "^1.0"
psycopg2-binary = "^2.7"
purl = "^1.4"
razorpay = "^1.1"
raven = "~6.9"
requests = "^2.21"
social-auth-app-django = "^3.1"
stripe = "^2.21"
text-unidecode = "^1.2"
uwsgi = {version = "^2.0", platform = "!= win32, != cygwin"}  # exclude windows
weasyprint = "^45.0"

[tool.poetry.dev-dependencies]
black = "19.3b0"
codecov = "^2.0"
coverage = "^4.5"
django-extensions = "^2.1"
isort = "^4.3"
pre-commit = "^1.16"
pycodestyle = "^2.5"
pydocstyle = "^3.0"
pylint = "^2.3"
pylint-celery = "^0"
pylint-django = "^2.0"
pylint-plugin-utils = "^0"
pytest = "~4.0"
pytest-cov = "^2.6"
pytest-django = "^3.4"
pytest-mock = "^1.10"
pytest-vcr = "^1.0"
pytest-xdist = "^1.26"
tox = "^3.7"
transifex-client = "^0"

[tool.black]
target_version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

